--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ flake8-import-order = "^0.18.1"
 mypy = "^0.971"
 isort = "^5.10.1"
 flake8-isort = "^4.2.0"
+sqlalchemy-stubs = "^0.4"
 
 [build-system]
 requires = ["poetry-core"]
