--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ mypy = "^0.971"
 isort = "^5.10.1"
 flake8-isort = "^4.2.0"
 sqlalchemy-stubs = "^0.4"
+httpx = "^0.23.1"
+requests = "^2.28.1"
 
 [build-system]
 requires = ["poetry-core"]
